# trivia

./: .gitignore
C++/: CMakeLists.txt  GameRunner.cpp  main.cpp
C++/game/: Game.h  GameRunner.cpp
C++/test/: mainTest.cpp
C-oo-style/: CMakeLists.txt  main.c
C-oo-style/game/: game.h  game_runner.c
C-oo-style/test/: mainTest.c
C-structless/: CMakeLists.txt  main.c
C-structless/game/: game.h  game_runner.c
C-structless/test/: mainTest.c
java/: build.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/adaptionsoft/games/trivia/runner/: GameRunner.java
java/src/test/java/com/adaptionsoft/games/trivia/: GoldenMasterTest.java
javascript/: .golden  README.md  game.js  golden.js  golden.spec.js  package.json
kotlin/: build.gradle
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/kotlin/com/adaptionsoft/games/trivia/runner/: GameRunner.kt  Main.kt
kotlin/src/test/kotlin/com/adaptionsoft/games/trivia/: GoldenMasterTest.kt
objective-c/trivia/: .gitignore  make-golden-master.sh  reference.txt  test-golden-master.bash
objective-c/trivia/trivia/: main.m
php/: .gitignore  GameGoldenMasterTest.php  README.md
python/: make_golden_master.py  trivia.py
python/test/: test_golden_master.py
ruby/: .gitignore  Gemfile  golden_master.out
ruby/spec/: golden_master_spec.rb
rust/: Cargo.toml
rust/src/: main.rs
